[package]
name = "Agenda Militant ICS Export"
version = "0.1.0"
edition = "2022"
description = "Create a web service to download the activist agenda (agendamilitant.org) as an ical file"
readme = "README.md"
license = "MIT"

[dependencies]
icalendar = "0.13.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
scraper = "0.13"
url = "2.2"
tiny_http = "0.11"

clap = { version = "3.2.22", features = ["derive"] }